<resources>
    <string name="app_name">MUSTAQEEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profiletext">Kindly Compelete Your MUSTAQEEM WELFARE GROUP Profile With Your Correct Information</string>

    <string name="company_name">MUSTAQEEM</string>
    <string name="company_short_descptrion">lets Help the Needy</string>


    <string name="mission_and_vision">
•Provide a mechanism that could possibly work where the individual has failed to deal with. \n• Various projects can be executed without having to use the government resources.\nThis is because there are many private donors who support the community.\n• Have the capability of communic-ating at all levels.\nThis means that we can easily interact with pakistanis and cascade their messages to top levels of the government. \n• Capable of recruiting highly motivated staff and experts in different fields of interest \n• Able to penetrate all corners of the community to find out what kind of problems people face and what they can do to make things better. \n• Help our people to improve the standards of life and teach people how to lead a better life.
        \n• Have the capability of communic-ating at all levels. \nThis means that we can easily interact with pakistanis and cascade
        their messages to top levels of the government. \n• Capable of recruiting highly motivated staff and
        experts in different fields of interest \n• Able to penetrate all corners of the community to find out
        what kind of problems people face and what they can do to make things better. \n• Help our people to
        improve the standards of life and teach people how to lead a better life \n• Provide counseling
        services dealing with social, moral, psychological, financial, educational and health issues,
        free of cost. • Organize social events, exhibitions, seminars, conferences and public lectures
        for the betterment of Pakistani community.
    </string>


    <string name="onbording_title">Al-Baqarah - The Cow - 2:261\n(Sura: 2, Verse: 261)</string>

    <string name="onboarding_desone">مَثَلُ الَّذِينَ يُنْفِقُونَ أَمْوَالَهُمْ فِي سَبِيلِ اللَّهِ كَمَثَلِ حَبَّةٍ أَنْبَتَتْ سَبْعَ سَنَابِلَ فِي كُلِّ سُنْبُلَةٍ مِائَةُ حَبَّةٍ ۗ وَاللَّهُ يُضَاعِفُ لِمَنْ يَشَاءُ ۗ وَاللَّهُ وَاسِعٌ عَلِيمٌ</string>
    <string name="onboarding_des_two">The example of those who spend their wealth in the way of Allah is like a seed [of grain] which grows seven spikes; in each spike is a hundred grains. And Allah multiplies [His reward] for whom He wills. And Allah is all-Encompassing and Knowing.</string>
    <string name="onboarding_des_three">جو لوگ اﷲ کی راہ میں اپنے مال خرچ کرتے ہیں ان کی مثال (اس) دانے کی سی ہے جس سے سات بالیاں اگیں (اور پھر) ہر بالی میں سو دانے ہوں (یعنی سات سو گنا اجر پاتے ہیں)، اور اﷲ جس کے لئے چاہتا ہے (اس سے بھی) اضافہ فرما دیتا ہے، اور اﷲ بڑی وسعت والا خوب جاننے والا ہے،</string>

    <string name="charity_title">MUSTAQEEM WELFARE GROUP</string>


    <string name="charity_det">Has been involved in a number of
        charitable activities since 2 Years such as:-\n\n-financial assistance to
        deserving families in hour of need -\n\n-Provided legal assistance to resolve minor and major
        cases faced by the labors, women, professionals and families.
        \n\n-Support More than 1100 Pakistani stuck Due to The pandemic covid-19 Helping them to arrange
        Air tickets -providing them foods All other needs inthe mean time\n\n-We ensure the provision of social, moral,
        financial and legal support to the members. </string>


    <string name="employstatus">What is your current employment status?</string>
    <string name="whatsapp_status">Application Whatsapp number</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="employed">Employed</string>
    <string name="unemployed">Unemployed</string>
    <string name="self_employed">Self-Employed</string>
    <string name="studen">Student</string>
    <string name="resume">How do you prefer to submit your resume</string>
    <string name="achivement">Please share your achievement?</string>
    <string name="des">What you want to do?\nshare your aim and goals\nshare your talent what you got?</string>

    <string name="vision">
        Provide a mechanism that could possibly work where the individual has failed to deal with--
    </string>

    <string name="Our_values">
        Various projects can be executed without having to use the government resources.This is because there are many private donors who support the community
    </string>

    <string name="Our_goals">
        Able to penetrate all corners of the community to find out what kind of problems people face and what they can do to make things better.
Help our people to improve the standards of life and teach people how to lead a better life.
    </string>

    <string name="Our_objective">
        Provide counseling services dealing with social, moral, psychological, financial, educational and health issues, free of cost.
Organize social events, exhibitions, seminars, conferences and public lectures for the betterment of Pakistani community.
    </string>
    <string name="visiontext">Our Vision</string>
    <string name="our_values">Our Values</string>
    <string name="our_goals">Our Goals</string>
    <string name="obj">Our Objective</string>
    <string name="profile">Profile</string>
    <string name="id_card">ID Card</string>
    <string name="project">Project</string>
    <string name="our_team">Our Team</string>
    <string name="logout">LogOut</string>
    <string name="cod">00971-</string>
    <string name="loadingdot">Loading ...</string>
    <string name="loading">loading</string>
    <string name="applicant_cv">Applicant CV</string>
    <string name="submit_your_application">Submit your Application</string>
    <string name="share">Share to your friends</string>
    <string name="exp_date">Exp. date</string>
    <string name="iss_date">Iss- date</string>
    <string name="work">Work:</string>
    <string name="full_name">Full Name:</string>
    <string name="id_no">ID No:</string>
    <string name="number">Contact. :</string>
    <string name="location">Location:</string>
    <string name="signature">(signature)</string>
    <string name="card_is_not_active">Card is not active</string>
    <string name="no_news_available">No News Available</string>

    <string name="share_message_one">
        Welcome Brother/sister!
        We\'re so happy you\'re here. We founded MUSTAQEEM WELFARE GROUP (Pakistani Community)
        because we wanted to create a trustworthy and inspiring place for you to find
        everything you need to help and support as well Click
        the Link Below to Connect with thousands of Pakistani nationals in UAE
        By MUSTAQEEM WELFARE GROUP
    </string>

    <string name="share_message_two">
        خوش آمدید بھائی / بہن!
ہم یہاں بہت خوش ہیں۔ ہم نے مستقیم ویلفر گروپ (پاکستانی کمیونٹی) کی بنیاد رکھی کیونکہ ہم آپ کے لئے ایک قابل اعتماد اور متاثر کن جگہ بنانا چاہتے تھے جس کی مدد اور مدد کے لئے آپ کی ضرورت ہے اور ساتھ ہی متحدہ عرب امارات کے ہزاروں پاکستانی شہریوں سے رابطہ قائم کرنے کے لئے نیچے لنک پر کلک کریں
بذریعہ   مستقیم ویلفر گروپ
    </string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="jobless">Jobless</string>
    <string name="visitor">Visitor</string>
    <string name="jobhint">E.g, Accountant/Driver/labor</string>
    <string name="i_am">I\'am</string>
    <string name="job_toast">Employment job require</string>
    <string name="job_number_toast">Number require</string>
    <string name="email_toast">Email require</string>
    <string name="lastname_toast">Last name require</string>
    <string name="firatname_toast">First name require</string>
    <string name="employment_toast">Employment status require</string>
    <string name="acivement_toast">Achievement require</string>
    <string name="status_toast">Your status require</string>
    <string name="search_by_profession">Search by profession</string>
    <string name="con">Continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="staff_required">Staff Required</string>
    <string name="notifaction">Notifaction</string>
    <string name="history">History</string>
    <string name="download_image">Download Image</string>
    <string name="download_message">If you want to download file you make sure your data charge apply</string>
    <string name="download">Download</string>
    <string name="no_need">No Need</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="search_by_name">Search by name</string>
    <string name="application_submit">Submit your Application</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>




    <string name="urdho_ln">
        اسلام علیکم۔
اپ لوگوں کو اپنے منشور اور اپنے مقاصد کے بارے میں خبر دیں رہے ہیں۔
کہ راس الخیمہ میں جتنے غریب۔مجبور اور مختاج پاکستانی لوگ کسی بھی مشکلات میں ہیں۔ہماری ٹیم نے پکا ارادہ کیا ہے۔ان شاءاللہ ان سب پاکستانیوں کی مشکلات ہم لوگ دن رات محنت کرکے حل کرنے کیلئے پوری پوری کوشش کرینگے۔جس مشکلات اور ضرورت کا ہم ذکر کررہے ہیں۔وہ کچھ یوں ہیں۔
1۔جس پاکستانی پر کسی مجبوری کی وجہ سے ہسپتال کا پیسہ باقی ہو۔
2۔جو پاکستانی کسی مرض میں مبتلا ہو اور اسکے ساتھ اپنے علاج کیلئے پیسہ نہیں ہو۔
3۔جس پاکستانی فیمیلی پر گھر کا بقایا ہو۔اور وہ اپنی کسی مجبوری کی وجہ سے ادا نہیں کیاہو۔
4۔جس پاکستانی فیمیلی کابجلی بل جمع نہ ہونے کی وجہ سےگھر کی بجلی کٹ چکی ہو۔
5۔اس پاکستانی کیلئے جیل سے باہر انے کیلئے کوشش ہوگی۔جو قصور نہ ہونے کے باوجو جیل میں ہو۔
6۔اس پاکستانی کیلئے ٹکٹ کا بندوبست ہوگا۔جو جیل کے اندر صرف اورصرف ٹکٹ کیلئے انتظار کر رھے ہوں۔
7۔جس پاکستانی فیملی کے پاس اپنے ویزے لگانے کے پیسے نا ہوں۔اور اس پر جرمانہ شروع ہوچکاہو۔
8۔جس پاکستانی کے ساتھ پاکستان جانے کیلئے ٹکٹ اور اوٹ پاس کیلئے پیسہ نا ہو۔
9۔جس پاکستانی کا کسی قسم کا جھگڑا ہو۔اس کا اللہ پاک کی رضا کیلئے صلہ کرنا۔
10۔جس پاکستانی کو uae قانوں کے بارے معلومات چاہیئے ۔وہ ضرورت کے مطابق معلومات دینا۔۔
11۔جس پاکستانی کے پاس اپنے بچوں کے اسکول فیس نہیں ہو ھم کوشش کر کے کسی جمعیہ سے ادا کروائیں۔
12۔جس پاکستانی کے گھر میں راشن نہیں ہو ۔
13۔جو پاکستانی لوگ uae میں ہونے کے باوجود بیروزگار ہوں۔اس کو نوکری پر لگانے کیلئے کوشش کرنا۔
14۔جس پاکستانی کا uae میں انتقال ہو گیا ہو۔اور اس کے گھر والوں کیساتھ اسکی ڈیڈ باڈی پاکستان بھیجنے کیلئے پیسہ نا ہو۔اس کے لئےسب کچھ برابر کرنے کیلئے کوشش کرنا۔
اور اس طرح کے اور دوسرے مشکلات کا بھی کوئی نہ کوئی حل نکالنے کیلئے پوری پوری کوشش کرینگے۔لیکن یہ سب کچھ کام uae قانون کے اندر کرینگے۔ ان شاءالله تعالیٰ
  شکریہ
    </string>


</resources>